// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`exporters.motion > comet × illustrator-classes.svg 1`] = `
""use client";

import {
  type AnimationOptions,
  type AnimationPlaybackControls,
  type DOMKeyframesDefinition,
  useAnimate,
  useReducedMotion,
} from "motion/react";
import { type CSSProperties, useEffect, useRef } from "react";

// Generated by strokekit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-hs9h04-0 {
  stroke: var(--sk-stroke, #E30613);
  stroke-width: 2;
  fill-opacity: 0.2;
  stroke-dasharray: 0.2 0.8;
  stroke-dashoffset: 1;
}
.sk-hs9h04-1 {
  stroke: var(--sk-stroke, #1D1D1B);
  stroke-dasharray: 0.2 0.8;
  stroke-dashoffset: 1;
}
.sk-hs9h04-2 {
  stroke: var(--sk-stroke, #2563eb);
  stroke-width: 2;
  fill-opacity: 0.2;
  stroke-dasharray: 0.2 0.8;
  stroke-dashoffset: 1;
}
.sk-hs9h04-3 {
  stroke: var(--sk-stroke, #10b981);
  stroke-dasharray: 0.2 0.8;
  stroke-dashoffset: 1;
}
@media (prefers-reduced-motion: reduce) {
  .sk-hs9h04 * {
    animation: none;
  }
  .sk-hs9h04-0 {
    stroke-dasharray: none;
    fill-opacity: 1;
  }
  .sk-hs9h04-1 {
    stroke-dasharray: none;
  }
  .sk-hs9h04-2 {
    stroke-dasharray: none;
    fill-opacity: 1;
  }
  .sk-hs9h04-3 {
    stroke-dasharray: none;
  }
}
\`;

type Track = { selector: string; keyframes: DOMKeyframesDefinition; options: AnimationOptions };

const tracks: Track[] = [
  {
    selector: ".sk-hs9h04-0",
    keyframes: {
      strokeDashoffset: [1, 0],
    },
    options: {
      duration: 1.6,
      delay: 0,
      ease: "linear",
      times: [0, 1],
      repeat: Number.POSITIVE_INFINITY,
      repeatType: "loop",
    },
  },
  {
    selector: ".sk-hs9h04-1",
    keyframes: {
      strokeDashoffset: [1, 0],
    },
    options: {
      duration: 1.6,
      delay: 0,
      ease: "linear",
      times: [0, 1],
      repeat: Number.POSITIVE_INFINITY,
      repeatType: "loop",
    },
  },
  {
    selector: ".sk-hs9h04-2",
    keyframes: {
      strokeDashoffset: [1, 0],
    },
    options: {
      duration: 1.6,
      delay: 0,
      ease: "linear",
      times: [0, 1],
      repeat: Number.POSITIVE_INFINITY,
      repeatType: "loop",
    },
  },
  {
    selector: ".sk-hs9h04-3",
    keyframes: {
      strokeDashoffset: [1, 0],
    },
    options: {
      duration: 1.6,
      delay: 0,
      ease: "linear",
      times: [0, 1],
      repeat: Number.POSITIVE_INFINITY,
      repeatType: "loop",
    },
  },
];

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const [scope, animate] = useAnimate<SVGSVGElement>();
  const reducedMotion = useReducedMotion();
  const controls = useRef<AnimationPlaybackControls[]>([]);

  useEffect(() => {
    if (reducedMotion) return;
    controls.current = tracks.map((track) =>
      animate(track.selector, track.keyframes, {
        ...track.options,
        ...(loop === undefined ? {} : { repeat: loop ? Number.POSITIVE_INFINITY : 0 }),
      }),
    );
    return () => {
      for (const control of controls.current) control.stop();
      controls.current = [];
    };
  }, [animate, loop, reducedMotion]);

  useEffect(() => {
    for (const control of controls.current) {
      control.speed = speed;
      if (paused) control.pause();
      else control.play();
    }
  }, [speed, paused, loop, reducedMotion]);

  return (
    <svg
      viewBox="0 0 200 100"
      id="Layer_1"
      width={size}
      height={size}
      className={className ? \`sk-hs9h04 \${className}\` : "sk-hs9h04"}
      ref={scope}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <path d="M10 90 L40 10 L70 90 Z" fill="#E30613" pathLength="1" className="sk-hs9h04-0" />
      <polyline points="80,90 110,10 140,90" fill="none" stroke="#1D1D1B" strokeWidth="4" strokeMiterlimit="10" pathLength="1" className="sk-hs9h04-1" />
      <path d="M150 90 L190 10" fill="none" stroke="#1D1D1B" strokeWidth="5" strokeMiterlimit="10" pathLength="1" className="sk-hs9h04-1" />
      <ellipse id="accent" cx="170" cy="70" rx="12" ry="8" fill="#2563eb" pathLength="1" className="sk-hs9h04-2" />
      <line x1="10" y1="95" x2="190" y2="95" fill="none" stroke="#10b981" strokeWidth="4" strokeMiterlimit="10" pathLength="1" className="sk-hs9h04-3" />
    </svg>
  );
}
"
`;

exports[`exporters.motion > comet × simple-stroke.svg 1`] = `
""use client";

import {
  type AnimationOptions,
  type AnimationPlaybackControls,
  type DOMKeyframesDefinition,
  useAnimate,
  useReducedMotion,
} from "motion/react";
import { type CSSProperties, useEffect, useRef } from "react";

// Generated by strokekit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-zky9fr-0 {
  stroke: var(--sk-stroke, #1d4ed8);
  stroke-dasharray: 0.2 0.8;
  stroke-dashoffset: 1;
}
@media (prefers-reduced-motion: reduce) {
  .sk-zky9fr * {
    animation: none;
  }
  .sk-zky9fr-0 {
    stroke-dasharray: none;
  }
}
\`;

type Track = { selector: string; keyframes: DOMKeyframesDefinition; options: AnimationOptions };

const tracks: Track[] = [
  {
    selector: ".sk-zky9fr-0",
    keyframes: {
      strokeDashoffset: [1, 0],
    },
    options: {
      duration: 1.6,
      delay: 0,
      ease: "linear",
      times: [0, 1],
      repeat: Number.POSITIVE_INFINITY,
      repeatType: "loop",
    },
  },
];

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const [scope, animate] = useAnimate<SVGSVGElement>();
  const reducedMotion = useReducedMotion();
  const controls = useRef<AnimationPlaybackControls[]>([]);

  useEffect(() => {
    if (reducedMotion) return;
    controls.current = tracks.map((track) =>
      animate(track.selector, track.keyframes, {
        ...track.options,
        ...(loop === undefined ? {} : { repeat: loop ? Number.POSITIVE_INFINITY : 0 }),
      }),
    );
    return () => {
      for (const control of controls.current) control.stop();
      controls.current = [];
    };
  }, [animate, loop, reducedMotion]);

  useEffect(() => {
    for (const control of controls.current) {
      control.speed = speed;
      if (paused) control.pause();
      else control.play();
    }
  }, [speed, paused, loop, reducedMotion]);

  return (
    <svg
      viewBox="0 0 120 120"
      width={size ?? 120}
      height={size ?? 120}
      className={className ? \`sk-zky9fr \${className}\` : "sk-zky9fr"}
      ref={scope}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <title>{"Anel e seta"}</title>
      <g fill="none" stroke="#1d4ed8" strokeWidth="6" strokeLinecap="round">
        <circle cx="60" cy="60" r="44" pathLength="1" className="sk-zky9fr-0" />
        <path d="M36 64 L56 84 L88 40" pathLength="1" className="sk-zky9fr-0" />
      </g>
    </svg>
  );
}
"
`;

exports[`exporters.motion > draw × illustrator-classes.svg 1`] = `
""use client";

import {
  type AnimationOptions,
  type AnimationPlaybackControls,
  type DOMKeyframesDefinition,
  useAnimate,
  useReducedMotion,
} from "motion/react";
import { type CSSProperties, useEffect, useRef } from "react";

// Generated by strokekit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-15wg6ka-0 {
  stroke: var(--sk-stroke, #E30613);
  stroke-width: 2;
  stroke-dasharray: 1 1;
  stroke-dashoffset: 1;
}
.sk-15wg6ka-1 {
  stroke: var(--sk-stroke, #1D1D1B);
  stroke-dasharray: 1 1;
  stroke-dashoffset: 1;
}
.sk-15wg6ka-2 {
  stroke: var(--sk-stroke, #2563eb);
  stroke-width: 2;
  stroke-dasharray: 1 1;
  stroke-dashoffset: 1;
}
.sk-15wg6ka-3 {
  stroke: var(--sk-stroke, #10b981);
  stroke-dasharray: 1 1;
  stroke-dashoffset: 1;
}
@media (prefers-reduced-motion: reduce) {
  .sk-15wg6ka * {
    animation: none;
  }
  .sk-15wg6ka-0 {
    stroke-dashoffset: 0;
  }
  .sk-15wg6ka-1 {
    stroke-dashoffset: 0;
  }
  .sk-15wg6ka-2 {
    stroke-dashoffset: 0;
  }
  .sk-15wg6ka-3 {
    stroke-dashoffset: 0;
  }
}
\`;

type Track = { selector: string; keyframes: DOMKeyframesDefinition; options: AnimationOptions };

const tracks: Track[] = [
  {
    selector: ".sk-15wg6ka-0",
    keyframes: {
      strokeDashoffset: [1, 0],
    },
    options: {
      duration: 1.5,
      delay: 0,
      ease: "easeInOut",
      times: [0, 1],
      repeat: 0,
      repeatType: "loop",
    },
  },
  {
    selector: ".sk-15wg6ka-1",
    keyframes: {
      strokeDashoffset: [1, 0],
    },
    options: {
      duration: 1.5,
      delay: 0,
      ease: "easeInOut",
      times: [0, 1],
      repeat: 0,
      repeatType: "loop",
    },
  },
  {
    selector: ".sk-15wg6ka-2",
    keyframes: {
      strokeDashoffset: [1, 0],
    },
    options: {
      duration: 1.5,
      delay: 0,
      ease: "easeInOut",
      times: [0, 1],
      repeat: 0,
      repeatType: "loop",
    },
  },
  {
    selector: ".sk-15wg6ka-3",
    keyframes: {
      strokeDashoffset: [1, 0],
    },
    options: {
      duration: 1.5,
      delay: 0,
      ease: "easeInOut",
      times: [0, 1],
      repeat: 0,
      repeatType: "loop",
    },
  },
];

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const [scope, animate] = useAnimate<SVGSVGElement>();
  const reducedMotion = useReducedMotion();
  const controls = useRef<AnimationPlaybackControls[]>([]);

  useEffect(() => {
    if (reducedMotion) return;
    controls.current = tracks.map((track) =>
      animate(track.selector, track.keyframes, {
        ...track.options,
        ...(loop === undefined ? {} : { repeat: loop ? Number.POSITIVE_INFINITY : 0 }),
      }),
    );
    return () => {
      for (const control of controls.current) control.stop();
      controls.current = [];
    };
  }, [animate, loop, reducedMotion]);

  useEffect(() => {
    for (const control of controls.current) {
      control.speed = speed;
      if (paused) control.pause();
      else control.play();
    }
  }, [speed, paused, loop, reducedMotion]);

  return (
    <svg
      viewBox="0 0 200 100"
      id="Layer_1"
      width={size}
      height={size}
      className={className ? \`sk-15wg6ka \${className}\` : "sk-15wg6ka"}
      ref={scope}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <path d="M10 90 L40 10 L70 90 Z" fill="#E30613" pathLength="1" className="sk-15wg6ka-0" />
      <polyline points="80,90 110,10 140,90" fill="none" stroke="#1D1D1B" strokeWidth="4" strokeMiterlimit="10" pathLength="1" className="sk-15wg6ka-1" />
      <path d="M150 90 L190 10" fill="none" stroke="#1D1D1B" strokeWidth="5" strokeMiterlimit="10" pathLength="1" className="sk-15wg6ka-1" />
      <ellipse id="accent" cx="170" cy="70" rx="12" ry="8" fill="#2563eb" pathLength="1" className="sk-15wg6ka-2" />
      <line x1="10" y1="95" x2="190" y2="95" fill="none" stroke="#10b981" strokeWidth="4" strokeMiterlimit="10" pathLength="1" className="sk-15wg6ka-3" />
    </svg>
  );
}
"
`;

exports[`exporters.motion > draw × simple-stroke.svg 1`] = `
""use client";

import {
  type AnimationOptions,
  type AnimationPlaybackControls,
  type DOMKeyframesDefinition,
  useAnimate,
  useReducedMotion,
} from "motion/react";
import { type CSSProperties, useEffect, useRef } from "react";

// Generated by strokekit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-18yl2gz-0 {
  stroke: var(--sk-stroke, #1d4ed8);
  stroke-dasharray: 1 1;
  stroke-dashoffset: 1;
}
@media (prefers-reduced-motion: reduce) {
  .sk-18yl2gz * {
    animation: none;
  }
  .sk-18yl2gz-0 {
    stroke-dashoffset: 0;
  }
}
\`;

type Track = { selector: string; keyframes: DOMKeyframesDefinition; options: AnimationOptions };

const tracks: Track[] = [
  {
    selector: ".sk-18yl2gz-0",
    keyframes: {
      strokeDashoffset: [1, 0],
    },
    options: {
      duration: 1.5,
      delay: 0,
      ease: "easeInOut",
      times: [0, 1],
      repeat: 0,
      repeatType: "loop",
    },
  },
];

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const [scope, animate] = useAnimate<SVGSVGElement>();
  const reducedMotion = useReducedMotion();
  const controls = useRef<AnimationPlaybackControls[]>([]);

  useEffect(() => {
    if (reducedMotion) return;
    controls.current = tracks.map((track) =>
      animate(track.selector, track.keyframes, {
        ...track.options,
        ...(loop === undefined ? {} : { repeat: loop ? Number.POSITIVE_INFINITY : 0 }),
      }),
    );
    return () => {
      for (const control of controls.current) control.stop();
      controls.current = [];
    };
  }, [animate, loop, reducedMotion]);

  useEffect(() => {
    for (const control of controls.current) {
      control.speed = speed;
      if (paused) control.pause();
      else control.play();
    }
  }, [speed, paused, loop, reducedMotion]);

  return (
    <svg
      viewBox="0 0 120 120"
      width={size ?? 120}
      height={size ?? 120}
      className={className ? \`sk-18yl2gz \${className}\` : "sk-18yl2gz"}
      ref={scope}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <title>{"Anel e seta"}</title>
      <g fill="none" stroke="#1d4ed8" strokeWidth="6" strokeLinecap="round">
        <circle cx="60" cy="60" r="44" pathLength="1" className="sk-18yl2gz-0" />
        <path d="M36 64 L56 84 L88 40" pathLength="1" className="sk-18yl2gz-0" />
      </g>
    </svg>
  );
}
"
`;

exports[`exporters.motion > draw-fill × illustrator-classes.svg 1`] = `
""use client";

import {
  type AnimationOptions,
  type AnimationPlaybackControls,
  type DOMKeyframesDefinition,
  useAnimate,
  useReducedMotion,
} from "motion/react";
import { type CSSProperties, useEffect, useRef } from "react";

// Generated by strokekit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-a4pjse-0 {
  stroke: var(--sk-stroke, #E30613);
  stroke-width: 2;
  stroke-dasharray: 1 1;
  stroke-dashoffset: 1;
  fill-opacity: 0;
}
.sk-a4pjse-1 {
  stroke: var(--sk-stroke, #1D1D1B);
  stroke-dasharray: 1 1;
  stroke-dashoffset: 1;
  fill-opacity: 0;
}
.sk-a4pjse-2 {
  stroke: var(--sk-stroke, #2563eb);
  stroke-width: 2;
  stroke-dasharray: 1 1;
  stroke-dashoffset: 1;
  fill-opacity: 0;
}
.sk-a4pjse-3 {
  stroke: var(--sk-stroke, #10b981);
  stroke-dasharray: 1 1;
  stroke-dashoffset: 1;
  fill-opacity: 0;
}
@media (prefers-reduced-motion: reduce) {
  .sk-a4pjse * {
    animation: none;
  }
  .sk-a4pjse-0 {
    stroke-dashoffset: 0;
    fill-opacity: 1;
  }
  .sk-a4pjse-1 {
    stroke-dashoffset: 0;
    fill-opacity: 1;
  }
  .sk-a4pjse-2 {
    stroke-dashoffset: 0;
    fill-opacity: 1;
  }
  .sk-a4pjse-3 {
    stroke-dashoffset: 0;
    fill-opacity: 1;
  }
}
\`;

type Track = { selector: string; keyframes: DOMKeyframesDefinition; options: AnimationOptions };

const tracks: Track[] = [
  {
    selector: ".sk-a4pjse-0",
    keyframes: {
      strokeDashoffset: [1, 0, 0],
      fillOpacity: [0, 0, 1],
    },
    options: {
      duration: 2,
      delay: 0,
      ease: "easeInOut",
      times: [0, 0.6, 1],
      repeat: 0,
      repeatType: "loop",
    },
  },
  {
    selector: ".sk-a4pjse-1",
    keyframes: {
      strokeDashoffset: [1, 0, 0],
      fillOpacity: [0, 0, 1],
    },
    options: {
      duration: 2,
      delay: 0,
      ease: "easeInOut",
      times: [0, 0.6, 1],
      repeat: 0,
      repeatType: "loop",
    },
  },
  {
    selector: ".sk-a4pjse-2",
    keyframes: {
      strokeDashoffset: [1, 0, 0],
      fillOpacity: [0, 0, 1],
    },
    options: {
      duration: 2,
      delay: 0,
      ease: "easeInOut",
      times: [0, 0.6, 1],
      repeat: 0,
      repeatType: "loop",
    },
  },
  {
    selector: ".sk-a4pjse-3",
    keyframes: {
      strokeDashoffset: [1, 0, 0],
      fillOpacity: [0, 0, 1],
    },
    options: {
      duration: 2,
      delay: 0,
      ease: "easeInOut",
      times: [0, 0.6, 1],
      repeat: 0,
      repeatType: "loop",
    },
  },
];

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const [scope, animate] = useAnimate<SVGSVGElement>();
  const reducedMotion = useReducedMotion();
  const controls = useRef<AnimationPlaybackControls[]>([]);

  useEffect(() => {
    if (reducedMotion) return;
    controls.current = tracks.map((track) =>
      animate(track.selector, track.keyframes, {
        ...track.options,
        ...(loop === undefined ? {} : { repeat: loop ? Number.POSITIVE_INFINITY : 0 }),
      }),
    );
    return () => {
      for (const control of controls.current) control.stop();
      controls.current = [];
    };
  }, [animate, loop, reducedMotion]);

  useEffect(() => {
    for (const control of controls.current) {
      control.speed = speed;
      if (paused) control.pause();
      else control.play();
    }
  }, [speed, paused, loop, reducedMotion]);

  return (
    <svg
      viewBox="0 0 200 100"
      id="Layer_1"
      width={size}
      height={size}
      className={className ? \`sk-a4pjse \${className}\` : "sk-a4pjse"}
      ref={scope}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <path d="M10 90 L40 10 L70 90 Z" fill="#E30613" pathLength="1" className="sk-a4pjse-0" />
      <polyline points="80,90 110,10 140,90" fill="none" stroke="#1D1D1B" strokeWidth="4" strokeMiterlimit="10" pathLength="1" className="sk-a4pjse-1" />
      <path d="M150 90 L190 10" fill="none" stroke="#1D1D1B" strokeWidth="5" strokeMiterlimit="10" pathLength="1" className="sk-a4pjse-1" />
      <ellipse id="accent" cx="170" cy="70" rx="12" ry="8" fill="#2563eb" pathLength="1" className="sk-a4pjse-2" />
      <line x1="10" y1="95" x2="190" y2="95" fill="none" stroke="#10b981" strokeWidth="4" strokeMiterlimit="10" pathLength="1" className="sk-a4pjse-3" />
    </svg>
  );
}
"
`;

exports[`exporters.motion > draw-fill × simple-stroke.svg 1`] = `
""use client";

import {
  type AnimationOptions,
  type AnimationPlaybackControls,
  type DOMKeyframesDefinition,
  useAnimate,
  useReducedMotion,
} from "motion/react";
import { type CSSProperties, useEffect, useRef } from "react";

// Generated by strokekit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-159tjnt-0 {
  stroke: var(--sk-stroke, #1d4ed8);
  stroke-dasharray: 1 1;
  stroke-dashoffset: 1;
  fill-opacity: 0;
}
@media (prefers-reduced-motion: reduce) {
  .sk-159tjnt * {
    animation: none;
  }
  .sk-159tjnt-0 {
    stroke-dashoffset: 0;
    fill-opacity: 1;
  }
}
\`;

type Track = { selector: string; keyframes: DOMKeyframesDefinition; options: AnimationOptions };

const tracks: Track[] = [
  {
    selector: ".sk-159tjnt-0",
    keyframes: {
      strokeDashoffset: [1, 0, 0],
      fillOpacity: [0, 0, 1],
    },
    options: {
      duration: 2,
      delay: 0,
      ease: "easeInOut",
      times: [0, 0.6, 1],
      repeat: 0,
      repeatType: "loop",
    },
  },
];

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const [scope, animate] = useAnimate<SVGSVGElement>();
  const reducedMotion = useReducedMotion();
  const controls = useRef<AnimationPlaybackControls[]>([]);

  useEffect(() => {
    if (reducedMotion) return;
    controls.current = tracks.map((track) =>
      animate(track.selector, track.keyframes, {
        ...track.options,
        ...(loop === undefined ? {} : { repeat: loop ? Number.POSITIVE_INFINITY : 0 }),
      }),
    );
    return () => {
      for (const control of controls.current) control.stop();
      controls.current = [];
    };
  }, [animate, loop, reducedMotion]);

  useEffect(() => {
    for (const control of controls.current) {
      control.speed = speed;
      if (paused) control.pause();
      else control.play();
    }
  }, [speed, paused, loop, reducedMotion]);

  return (
    <svg
      viewBox="0 0 120 120"
      width={size ?? 120}
      height={size ?? 120}
      className={className ? \`sk-159tjnt \${className}\` : "sk-159tjnt"}
      ref={scope}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <title>{"Anel e seta"}</title>
      <g fill="none" stroke="#1d4ed8" strokeWidth="6" strokeLinecap="round">
        <circle cx="60" cy="60" r="44" pathLength="1" className="sk-159tjnt-0" />
        <path d="M36 64 L56 84 L88 40" pathLength="1" className="sk-159tjnt-0" />
      </g>
    </svg>
  );
}
"
`;

exports[`exporters.motion > march × illustrator-classes.svg 1`] = `
""use client";

import {
  type AnimationOptions,
  type AnimationPlaybackControls,
  type DOMKeyframesDefinition,
  useAnimate,
  useReducedMotion,
} from "motion/react";
import { type CSSProperties, useEffect, useRef } from "react";

// Generated by strokekit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-1n27b5f-0 {
  stroke: var(--sk-stroke, #E30613);
  stroke-width: 2;
  fill-opacity: 0.2;
  stroke-dasharray: 0.0408 0.0306;
  stroke-dashoffset: 0;
}
.sk-1n27b5f-1 {
  stroke: var(--sk-stroke, #1D1D1B);
  stroke-dasharray: 0.0408 0.0306;
  stroke-dashoffset: 0;
}
.sk-1n27b5f-2 {
  stroke: var(--sk-stroke, #2563eb);
  stroke-width: 2;
  fill-opacity: 0.2;
  stroke-dasharray: 0.0408 0.0306;
  stroke-dashoffset: 0;
}
.sk-1n27b5f-3 {
  stroke: var(--sk-stroke, #10b981);
  stroke-dasharray: 0.0408 0.0306;
  stroke-dashoffset: 0;
}
@media (prefers-reduced-motion: reduce) {
  .sk-1n27b5f * {
    animation: none;
  }
  .sk-1n27b5f-0 {
    fill-opacity: 1;
  }
  .sk-1n27b5f-2 {
    fill-opacity: 1;
  }
}
\`;

type Track = { selector: string; keyframes: DOMKeyframesDefinition; options: AnimationOptions };

const tracks: Track[] = [
  {
    selector: ".sk-1n27b5f-0",
    keyframes: {
      strokeDashoffset: [0, -0.0714],
    },
    options: {
      duration: 0.8,
      delay: 0,
      ease: "linear",
      times: [0, 1],
      repeat: Number.POSITIVE_INFINITY,
      repeatType: "loop",
    },
  },
  {
    selector: ".sk-1n27b5f-1",
    keyframes: {
      strokeDashoffset: [0, -0.0714],
    },
    options: {
      duration: 0.8,
      delay: 0,
      ease: "linear",
      times: [0, 1],
      repeat: Number.POSITIVE_INFINITY,
      repeatType: "loop",
    },
  },
  {
    selector: ".sk-1n27b5f-2",
    keyframes: {
      strokeDashoffset: [0, -0.0714],
    },
    options: {
      duration: 0.8,
      delay: 0,
      ease: "linear",
      times: [0, 1],
      repeat: Number.POSITIVE_INFINITY,
      repeatType: "loop",
    },
  },
  {
    selector: ".sk-1n27b5f-3",
    keyframes: {
      strokeDashoffset: [0, -0.0714],
    },
    options: {
      duration: 0.8,
      delay: 0,
      ease: "linear",
      times: [0, 1],
      repeat: Number.POSITIVE_INFINITY,
      repeatType: "loop",
    },
  },
];

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const [scope, animate] = useAnimate<SVGSVGElement>();
  const reducedMotion = useReducedMotion();
  const controls = useRef<AnimationPlaybackControls[]>([]);

  useEffect(() => {
    if (reducedMotion) return;
    controls.current = tracks.map((track) =>
      animate(track.selector, track.keyframes, {
        ...track.options,
        ...(loop === undefined ? {} : { repeat: loop ? Number.POSITIVE_INFINITY : 0 }),
      }),
    );
    return () => {
      for (const control of controls.current) control.stop();
      controls.current = [];
    };
  }, [animate, loop, reducedMotion]);

  useEffect(() => {
    for (const control of controls.current) {
      control.speed = speed;
      if (paused) control.pause();
      else control.play();
    }
  }, [speed, paused, loop, reducedMotion]);

  return (
    <svg
      viewBox="0 0 200 100"
      id="Layer_1"
      width={size}
      height={size}
      className={className ? \`sk-1n27b5f \${className}\` : "sk-1n27b5f"}
      ref={scope}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <path d="M10 90 L40 10 L70 90 Z" fill="#E30613" pathLength="1" className="sk-1n27b5f-0" />
      <polyline points="80,90 110,10 140,90" fill="none" stroke="#1D1D1B" strokeWidth="4" strokeMiterlimit="10" pathLength="1" className="sk-1n27b5f-1" />
      <path d="M150 90 L190 10" fill="none" stroke="#1D1D1B" strokeWidth="5" strokeMiterlimit="10" pathLength="1" className="sk-1n27b5f-1" />
      <ellipse id="accent" cx="170" cy="70" rx="12" ry="8" fill="#2563eb" pathLength="1" className="sk-1n27b5f-2" />
      <line x1="10" y1="95" x2="190" y2="95" fill="none" stroke="#10b981" strokeWidth="4" strokeMiterlimit="10" pathLength="1" className="sk-1n27b5f-3" />
    </svg>
  );
}
"
`;

exports[`exporters.motion > march × simple-stroke.svg 1`] = `
""use client";

import {
  type AnimationOptions,
  type AnimationPlaybackControls,
  type DOMKeyframesDefinition,
  useAnimate,
  useReducedMotion,
} from "motion/react";
import { type CSSProperties, useEffect, useRef } from "react";

// Generated by strokekit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-4quvq4-0 {
  stroke: var(--sk-stroke, #1d4ed8);
  stroke-dasharray: 0.0408 0.0306;
  stroke-dashoffset: 0;
}
@media (prefers-reduced-motion: reduce) {
  .sk-4quvq4 * {
    animation: none;
  }
}
\`;

type Track = { selector: string; keyframes: DOMKeyframesDefinition; options: AnimationOptions };

const tracks: Track[] = [
  {
    selector: ".sk-4quvq4-0",
    keyframes: {
      strokeDashoffset: [0, -0.0714],
    },
    options: {
      duration: 0.8,
      delay: 0,
      ease: "linear",
      times: [0, 1],
      repeat: Number.POSITIVE_INFINITY,
      repeatType: "loop",
    },
  },
];

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const [scope, animate] = useAnimate<SVGSVGElement>();
  const reducedMotion = useReducedMotion();
  const controls = useRef<AnimationPlaybackControls[]>([]);

  useEffect(() => {
    if (reducedMotion) return;
    controls.current = tracks.map((track) =>
      animate(track.selector, track.keyframes, {
        ...track.options,
        ...(loop === undefined ? {} : { repeat: loop ? Number.POSITIVE_INFINITY : 0 }),
      }),
    );
    return () => {
      for (const control of controls.current) control.stop();
      controls.current = [];
    };
  }, [animate, loop, reducedMotion]);

  useEffect(() => {
    for (const control of controls.current) {
      control.speed = speed;
      if (paused) control.pause();
      else control.play();
    }
  }, [speed, paused, loop, reducedMotion]);

  return (
    <svg
      viewBox="0 0 120 120"
      width={size ?? 120}
      height={size ?? 120}
      className={className ? \`sk-4quvq4 \${className}\` : "sk-4quvq4"}
      ref={scope}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <title>{"Anel e seta"}</title>
      <g fill="none" stroke="#1d4ed8" strokeWidth="6" strokeLinecap="round">
        <circle cx="60" cy="60" r="44" pathLength="1" className="sk-4quvq4-0" />
        <path d="M36 64 L56 84 L88 40" pathLength="1" className="sk-4quvq4-0" />
      </g>
    </svg>
  );
}
"
`;

exports[`exporters.motion > pulse × illustrator-classes.svg 1`] = `
""use client";

import {
  type AnimationOptions,
  type AnimationPlaybackControls,
  type DOMKeyframesDefinition,
  useAnimate,
  useReducedMotion,
} from "motion/react";
import { type CSSProperties, useEffect, useRef } from "react";

// Generated by strokekit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-1djgz4m-0 {
  transform-box: fill-box;
  transform-origin: center;
  opacity: 1;
  transform: scale(1);
}
@media (prefers-reduced-motion: reduce) {
  .sk-1djgz4m * {
    animation: none;
  }
  .sk-1djgz4m-0 {
    opacity: 1;
    transform: none;
  }
}
\`;

type Track = { selector: string; keyframes: DOMKeyframesDefinition; options: AnimationOptions };

const tracks: Track[] = [
  {
    selector: ".sk-1djgz4m-0",
    keyframes: {
      opacity: [1, 0.5, 1],
      scale: [1, 1.06, 1],
    },
    options: {
      duration: 1.4,
      delay: 0,
      ease: "easeInOut",
      times: [0, 0.5, 1],
      repeat: Number.POSITIVE_INFINITY,
      repeatType: "loop",
    },
  },
];

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const [scope, animate] = useAnimate<SVGSVGElement>();
  const reducedMotion = useReducedMotion();
  const controls = useRef<AnimationPlaybackControls[]>([]);

  useEffect(() => {
    if (reducedMotion) return;
    controls.current = tracks.map((track) =>
      animate(track.selector, track.keyframes, {
        ...track.options,
        ...(loop === undefined ? {} : { repeat: loop ? Number.POSITIVE_INFINITY : 0 }),
      }),
    );
    return () => {
      for (const control of controls.current) control.stop();
      controls.current = [];
    };
  }, [animate, loop, reducedMotion]);

  useEffect(() => {
    for (const control of controls.current) {
      control.speed = speed;
      if (paused) control.pause();
      else control.play();
    }
  }, [speed, paused, loop, reducedMotion]);

  return (
    <svg
      viewBox="0 0 200 100"
      id="Layer_1"
      width={size}
      height={size}
      className={className ? \`sk-1djgz4m \${className}\` : "sk-1djgz4m"}
      ref={scope}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <path d="M10 90 L40 10 L70 90 Z" fill="#E30613" className="sk-1djgz4m-0" />
      <polyline points="80,90 110,10 140,90" fill="none" stroke="#1D1D1B" strokeWidth="4" strokeMiterlimit="10" className="sk-1djgz4m-0" />
      <path d="M150 90 L190 10" fill="none" stroke="#1D1D1B" strokeWidth="5" strokeMiterlimit="10" className="sk-1djgz4m-0" />
      <ellipse id="accent" cx="170" cy="70" rx="12" ry="8" fill="#2563eb" className="sk-1djgz4m-0" />
      <line x1="10" y1="95" x2="190" y2="95" fill="none" stroke="#10b981" strokeWidth="4" strokeMiterlimit="10" className="sk-1djgz4m-0" />
    </svg>
  );
}
"
`;

exports[`exporters.motion > pulse × simple-stroke.svg 1`] = `
""use client";

import {
  type AnimationOptions,
  type AnimationPlaybackControls,
  type DOMKeyframesDefinition,
  useAnimate,
  useReducedMotion,
} from "motion/react";
import { type CSSProperties, useEffect, useRef } from "react";

// Generated by strokekit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-18asr03-0 {
  transform-box: fill-box;
  transform-origin: center;
  opacity: 1;
  transform: scale(1);
}
@media (prefers-reduced-motion: reduce) {
  .sk-18asr03 * {
    animation: none;
  }
  .sk-18asr03-0 {
    opacity: 1;
    transform: none;
  }
}
\`;

type Track = { selector: string; keyframes: DOMKeyframesDefinition; options: AnimationOptions };

const tracks: Track[] = [
  {
    selector: ".sk-18asr03-0",
    keyframes: {
      opacity: [1, 0.5, 1],
      scale: [1, 1.06, 1],
    },
    options: {
      duration: 1.4,
      delay: 0,
      ease: "easeInOut",
      times: [0, 0.5, 1],
      repeat: Number.POSITIVE_INFINITY,
      repeatType: "loop",
    },
  },
];

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const [scope, animate] = useAnimate<SVGSVGElement>();
  const reducedMotion = useReducedMotion();
  const controls = useRef<AnimationPlaybackControls[]>([]);

  useEffect(() => {
    if (reducedMotion) return;
    controls.current = tracks.map((track) =>
      animate(track.selector, track.keyframes, {
        ...track.options,
        ...(loop === undefined ? {} : { repeat: loop ? Number.POSITIVE_INFINITY : 0 }),
      }),
    );
    return () => {
      for (const control of controls.current) control.stop();
      controls.current = [];
    };
  }, [animate, loop, reducedMotion]);

  useEffect(() => {
    for (const control of controls.current) {
      control.speed = speed;
      if (paused) control.pause();
      else control.play();
    }
  }, [speed, paused, loop, reducedMotion]);

  return (
    <svg
      viewBox="0 0 120 120"
      width={size ?? 120}
      height={size ?? 120}
      className={className ? \`sk-18asr03 \${className}\` : "sk-18asr03"}
      ref={scope}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <title>{"Anel e seta"}</title>
      <g fill="none" stroke="#1d4ed8" strokeWidth="6" strokeLinecap="round">
        <circle cx="60" cy="60" r="44" className="sk-18asr03-0" />
        <path d="M36 64 L56 84 L88 40" className="sk-18asr03-0" />
      </g>
    </svg>
  );
}
"
`;

exports[`exporters.motion > stagger-draw × illustrator-classes.svg 1`] = `
""use client";

import {
  type AnimationOptions,
  type AnimationPlaybackControls,
  type DOMKeyframesDefinition,
  useAnimate,
  useReducedMotion,
} from "motion/react";
import { type CSSProperties, useEffect, useRef } from "react";

// Generated by strokekit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-1oe5b5q-0 {
  stroke: var(--sk-stroke, #E30613);
  stroke-width: 2;
  stroke-dasharray: 1 1;
  stroke-dashoffset: 1;
}
.sk-1oe5b5q-1 {
  stroke: var(--sk-stroke, #1D1D1B);
  stroke-dasharray: 1 1;
  stroke-dashoffset: 1;
}
.sk-1oe5b5q-2 {
  stroke: var(--sk-stroke, #1D1D1B);
  stroke-dasharray: 1 1;
  stroke-dashoffset: 1;
}
.sk-1oe5b5q-3 {
  stroke: var(--sk-stroke, #2563eb);
  stroke-width: 2;
  stroke-dasharray: 1 1;
  stroke-dashoffset: 1;
}
.sk-1oe5b5q-4 {
  stroke: var(--sk-stroke, #10b981);
  stroke-dasharray: 1 1;
  stroke-dashoffset: 1;
}
@media (prefers-reduced-motion: reduce) {
  .sk-1oe5b5q * {
    animation: none;
  }
  .sk-1oe5b5q-0 {
    stroke-dashoffset: 0;
  }
  .sk-1oe5b5q-1 {
    stroke-dashoffset: 0;
  }
  .sk-1oe5b5q-2 {
    stroke-dashoffset: 0;
  }
  .sk-1oe5b5q-3 {
    stroke-dashoffset: 0;
  }
  .sk-1oe5b5q-4 {
    stroke-dashoffset: 0;
  }
}
\`;

type Track = { selector: string; keyframes: DOMKeyframesDefinition; options: AnimationOptions };

const tracks: Track[] = [
  {
    selector: ".sk-1oe5b5q-0",
    keyframes: {
      strokeDashoffset: [1, 0],
    },
    options: {
      duration: 0.9,
      delay: 0,
      ease: "easeInOut",
      times: [0, 1],
      repeat: 0,
      repeatType: "loop",
    },
  },
  {
    selector: ".sk-1oe5b5q-1",
    keyframes: {
      strokeDashoffset: [1, 0],
    },
    options: {
      duration: 0.9,
      delay: 0.15,
      ease: "easeInOut",
      times: [0, 1],
      repeat: 0,
      repeatType: "loop",
    },
  },
  {
    selector: ".sk-1oe5b5q-2",
    keyframes: {
      strokeDashoffset: [1, 0],
    },
    options: {
      duration: 0.9,
      delay: 0.3,
      ease: "easeInOut",
      times: [0, 1],
      repeat: 0,
      repeatType: "loop",
    },
  },
  {
    selector: ".sk-1oe5b5q-3",
    keyframes: {
      strokeDashoffset: [1, 0],
    },
    options: {
      duration: 0.9,
      delay: 0.45,
      ease: "easeInOut",
      times: [0, 1],
      repeat: 0,
      repeatType: "loop",
    },
  },
  {
    selector: ".sk-1oe5b5q-4",
    keyframes: {
      strokeDashoffset: [1, 0],
    },
    options: {
      duration: 0.9,
      delay: 0.6,
      ease: "easeInOut",
      times: [0, 1],
      repeat: 0,
      repeatType: "loop",
    },
  },
];

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const [scope, animate] = useAnimate<SVGSVGElement>();
  const reducedMotion = useReducedMotion();
  const controls = useRef<AnimationPlaybackControls[]>([]);

  useEffect(() => {
    if (reducedMotion) return;
    controls.current = tracks.map((track) =>
      animate(track.selector, track.keyframes, {
        ...track.options,
        ...(loop === undefined ? {} : { repeat: loop ? Number.POSITIVE_INFINITY : 0 }),
      }),
    );
    return () => {
      for (const control of controls.current) control.stop();
      controls.current = [];
    };
  }, [animate, loop, reducedMotion]);

  useEffect(() => {
    for (const control of controls.current) {
      control.speed = speed;
      if (paused) control.pause();
      else control.play();
    }
  }, [speed, paused, loop, reducedMotion]);

  return (
    <svg
      viewBox="0 0 200 100"
      id="Layer_1"
      width={size}
      height={size}
      className={className ? \`sk-1oe5b5q \${className}\` : "sk-1oe5b5q"}
      ref={scope}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <path d="M10 90 L40 10 L70 90 Z" fill="#E30613" pathLength="1" className="sk-1oe5b5q-0" />
      <polyline points="80,90 110,10 140,90" fill="none" stroke="#1D1D1B" strokeWidth="4" strokeMiterlimit="10" pathLength="1" className="sk-1oe5b5q-1" />
      <path d="M150 90 L190 10" fill="none" stroke="#1D1D1B" strokeWidth="5" strokeMiterlimit="10" pathLength="1" className="sk-1oe5b5q-2" />
      <ellipse id="accent" cx="170" cy="70" rx="12" ry="8" fill="#2563eb" pathLength="1" className="sk-1oe5b5q-3" />
      <line x1="10" y1="95" x2="190" y2="95" fill="none" stroke="#10b981" strokeWidth="4" strokeMiterlimit="10" pathLength="1" className="sk-1oe5b5q-4" />
    </svg>
  );
}
"
`;

exports[`exporters.motion > stagger-draw × simple-stroke.svg 1`] = `
""use client";

import {
  type AnimationOptions,
  type AnimationPlaybackControls,
  type DOMKeyframesDefinition,
  useAnimate,
  useReducedMotion,
} from "motion/react";
import { type CSSProperties, useEffect, useRef } from "react";

// Generated by strokekit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-1sybw6l-0 {
  stroke: var(--sk-stroke, #1d4ed8);
  stroke-dasharray: 1 1;
  stroke-dashoffset: 1;
}
.sk-1sybw6l-1 {
  stroke: var(--sk-stroke, #1d4ed8);
  stroke-dasharray: 1 1;
  stroke-dashoffset: 1;
}
@media (prefers-reduced-motion: reduce) {
  .sk-1sybw6l * {
    animation: none;
  }
  .sk-1sybw6l-0 {
    stroke-dashoffset: 0;
  }
  .sk-1sybw6l-1 {
    stroke-dashoffset: 0;
  }
}
\`;

type Track = { selector: string; keyframes: DOMKeyframesDefinition; options: AnimationOptions };

const tracks: Track[] = [
  {
    selector: ".sk-1sybw6l-0",
    keyframes: {
      strokeDashoffset: [1, 0],
    },
    options: {
      duration: 0.9,
      delay: 0,
      ease: "easeInOut",
      times: [0, 1],
      repeat: 0,
      repeatType: "loop",
    },
  },
  {
    selector: ".sk-1sybw6l-1",
    keyframes: {
      strokeDashoffset: [1, 0],
    },
    options: {
      duration: 0.9,
      delay: 0.15,
      ease: "easeInOut",
      times: [0, 1],
      repeat: 0,
      repeatType: "loop",
    },
  },
];

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const [scope, animate] = useAnimate<SVGSVGElement>();
  const reducedMotion = useReducedMotion();
  const controls = useRef<AnimationPlaybackControls[]>([]);

  useEffect(() => {
    if (reducedMotion) return;
    controls.current = tracks.map((track) =>
      animate(track.selector, track.keyframes, {
        ...track.options,
        ...(loop === undefined ? {} : { repeat: loop ? Number.POSITIVE_INFINITY : 0 }),
      }),
    );
    return () => {
      for (const control of controls.current) control.stop();
      controls.current = [];
    };
  }, [animate, loop, reducedMotion]);

  useEffect(() => {
    for (const control of controls.current) {
      control.speed = speed;
      if (paused) control.pause();
      else control.play();
    }
  }, [speed, paused, loop, reducedMotion]);

  return (
    <svg
      viewBox="0 0 120 120"
      width={size ?? 120}
      height={size ?? 120}
      className={className ? \`sk-1sybw6l \${className}\` : "sk-1sybw6l"}
      ref={scope}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <title>{"Anel e seta"}</title>
      <g fill="none" stroke="#1d4ed8" strokeWidth="6" strokeLinecap="round">
        <circle cx="60" cy="60" r="44" pathLength="1" className="sk-1sybw6l-0" />
        <path d="M36 64 L56 84 L88 40" pathLength="1" className="sk-1sybw6l-1" />
      </g>
    </svg>
  );
}
"
`;

exports[`exporters.motion > yoyo × illustrator-classes.svg 1`] = `
""use client";

import {
  type AnimationOptions,
  type AnimationPlaybackControls,
  type DOMKeyframesDefinition,
  useAnimate,
  useReducedMotion,
} from "motion/react";
import { type CSSProperties, useEffect, useRef } from "react";

// Generated by strokekit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-1747lde-0 {
  stroke: var(--sk-stroke, #E30613);
  stroke-width: 2;
  fill-opacity: 0.2;
  stroke-dasharray: 0.25 1;
  stroke-dashoffset: 0;
}
.sk-1747lde-1 {
  stroke: var(--sk-stroke, #1D1D1B);
  stroke-dasharray: 0.25 1;
  stroke-dashoffset: 0;
}
.sk-1747lde-2 {
  stroke: var(--sk-stroke, #2563eb);
  stroke-width: 2;
  fill-opacity: 0.2;
  stroke-dasharray: 0.25 1;
  stroke-dashoffset: 0;
}
.sk-1747lde-3 {
  stroke: var(--sk-stroke, #10b981);
  stroke-dasharray: 0.25 1;
  stroke-dashoffset: 0;
}
@media (prefers-reduced-motion: reduce) {
  .sk-1747lde * {
    animation: none;
  }
  .sk-1747lde-0 {
    stroke-dasharray: none;
    fill-opacity: 1;
  }
  .sk-1747lde-1 {
    stroke-dasharray: none;
  }
  .sk-1747lde-2 {
    stroke-dasharray: none;
    fill-opacity: 1;
  }
  .sk-1747lde-3 {
    stroke-dasharray: none;
  }
}
\`;

type Track = { selector: string; keyframes: DOMKeyframesDefinition; options: AnimationOptions };

const tracks: Track[] = [
  {
    selector: ".sk-1747lde-0",
    keyframes: {
      strokeDashoffset: [0, -0.75],
    },
    options: {
      duration: 1.2,
      delay: 0,
      ease: "easeInOut",
      times: [0, 1],
      repeat: Number.POSITIVE_INFINITY,
      repeatType: "reverse",
    },
  },
  {
    selector: ".sk-1747lde-1",
    keyframes: {
      strokeDashoffset: [0, -0.75],
    },
    options: {
      duration: 1.2,
      delay: 0,
      ease: "easeInOut",
      times: [0, 1],
      repeat: Number.POSITIVE_INFINITY,
      repeatType: "reverse",
    },
  },
  {
    selector: ".sk-1747lde-2",
    keyframes: {
      strokeDashoffset: [0, -0.75],
    },
    options: {
      duration: 1.2,
      delay: 0,
      ease: "easeInOut",
      times: [0, 1],
      repeat: Number.POSITIVE_INFINITY,
      repeatType: "reverse",
    },
  },
  {
    selector: ".sk-1747lde-3",
    keyframes: {
      strokeDashoffset: [0, -0.75],
    },
    options: {
      duration: 1.2,
      delay: 0,
      ease: "easeInOut",
      times: [0, 1],
      repeat: Number.POSITIVE_INFINITY,
      repeatType: "reverse",
    },
  },
];

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const [scope, animate] = useAnimate<SVGSVGElement>();
  const reducedMotion = useReducedMotion();
  const controls = useRef<AnimationPlaybackControls[]>([]);

  useEffect(() => {
    if (reducedMotion) return;
    controls.current = tracks.map((track) =>
      animate(track.selector, track.keyframes, {
        ...track.options,
        ...(loop === undefined ? {} : { repeat: loop ? Number.POSITIVE_INFINITY : 0 }),
      }),
    );
    return () => {
      for (const control of controls.current) control.stop();
      controls.current = [];
    };
  }, [animate, loop, reducedMotion]);

  useEffect(() => {
    for (const control of controls.current) {
      control.speed = speed;
      if (paused) control.pause();
      else control.play();
    }
  }, [speed, paused, loop, reducedMotion]);

  return (
    <svg
      viewBox="0 0 200 100"
      id="Layer_1"
      width={size}
      height={size}
      className={className ? \`sk-1747lde \${className}\` : "sk-1747lde"}
      ref={scope}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <path d="M10 90 L40 10 L70 90 Z" fill="#E30613" pathLength="1" className="sk-1747lde-0" />
      <polyline points="80,90 110,10 140,90" fill="none" stroke="#1D1D1B" strokeWidth="4" strokeMiterlimit="10" pathLength="1" className="sk-1747lde-1" />
      <path d="M150 90 L190 10" fill="none" stroke="#1D1D1B" strokeWidth="5" strokeMiterlimit="10" pathLength="1" className="sk-1747lde-1" />
      <ellipse id="accent" cx="170" cy="70" rx="12" ry="8" fill="#2563eb" pathLength="1" className="sk-1747lde-2" />
      <line x1="10" y1="95" x2="190" y2="95" fill="none" stroke="#10b981" strokeWidth="4" strokeMiterlimit="10" pathLength="1" className="sk-1747lde-3" />
    </svg>
  );
}
"
`;

exports[`exporters.motion > yoyo × simple-stroke.svg 1`] = `
""use client";

import {
  type AnimationOptions,
  type AnimationPlaybackControls,
  type DOMKeyframesDefinition,
  useAnimate,
  useReducedMotion,
} from "motion/react";
import { type CSSProperties, useEffect, useRef } from "react";

// Generated by strokekit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-1xwti19-0 {
  stroke: var(--sk-stroke, #1d4ed8);
  stroke-dasharray: 0.25 1;
  stroke-dashoffset: 0;
}
@media (prefers-reduced-motion: reduce) {
  .sk-1xwti19 * {
    animation: none;
  }
  .sk-1xwti19-0 {
    stroke-dasharray: none;
  }
}
\`;

type Track = { selector: string; keyframes: DOMKeyframesDefinition; options: AnimationOptions };

const tracks: Track[] = [
  {
    selector: ".sk-1xwti19-0",
    keyframes: {
      strokeDashoffset: [0, -0.75],
    },
    options: {
      duration: 1.2,
      delay: 0,
      ease: "easeInOut",
      times: [0, 1],
      repeat: Number.POSITIVE_INFINITY,
      repeatType: "reverse",
    },
  },
];

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const [scope, animate] = useAnimate<SVGSVGElement>();
  const reducedMotion = useReducedMotion();
  const controls = useRef<AnimationPlaybackControls[]>([]);

  useEffect(() => {
    if (reducedMotion) return;
    controls.current = tracks.map((track) =>
      animate(track.selector, track.keyframes, {
        ...track.options,
        ...(loop === undefined ? {} : { repeat: loop ? Number.POSITIVE_INFINITY : 0 }),
      }),
    );
    return () => {
      for (const control of controls.current) control.stop();
      controls.current = [];
    };
  }, [animate, loop, reducedMotion]);

  useEffect(() => {
    for (const control of controls.current) {
      control.speed = speed;
      if (paused) control.pause();
      else control.play();
    }
  }, [speed, paused, loop, reducedMotion]);

  return (
    <svg
      viewBox="0 0 120 120"
      width={size ?? 120}
      height={size ?? 120}
      className={className ? \`sk-1xwti19 \${className}\` : "sk-1xwti19"}
      ref={scope}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <title>{"Anel e seta"}</title>
      <g fill="none" stroke="#1d4ed8" strokeWidth="6" strokeLinecap="round">
        <circle cx="60" cy="60" r="44" pathLength="1" className="sk-1xwti19-0" />
        <path d="M36 64 L56 84 L88 40" pathLength="1" className="sk-1xwti19-0" />
      </g>
    </svg>
  );
}
"
`;

exports[`exporters.react > comet × illustrator-classes.svg 1`] = `
"import type { CSSProperties } from "react";

// Generated by strokekit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-hs9h04-0 {
  stroke: var(--sk-stroke, #E30613);
  stroke-width: 2;
  fill-opacity: 0.2;
  stroke-dasharray: 0.2 0.8;
  animation: sk-hs9h04-t0-comet calc(1600ms / var(--sk-speed, 1)) linear 0ms var(--sk-iterations, infinite) normal both;
  animation-play-state: var(--sk-play-state, running);
}
.sk-hs9h04-1 {
  stroke: var(--sk-stroke, #1D1D1B);
  stroke-dasharray: 0.2 0.8;
  animation: sk-hs9h04-t0-comet calc(1600ms / var(--sk-speed, 1)) linear 0ms var(--sk-iterations, infinite) normal both;
  animation-play-state: var(--sk-play-state, running);
}
.sk-hs9h04-2 {
  stroke: var(--sk-stroke, #2563eb);
  stroke-width: 2;
  fill-opacity: 0.2;
  stroke-dasharray: 0.2 0.8;
  animation: sk-hs9h04-t0-comet calc(1600ms / var(--sk-speed, 1)) linear 0ms var(--sk-iterations, infinite) normal both;
  animation-play-state: var(--sk-play-state, running);
}
.sk-hs9h04-3 {
  stroke: var(--sk-stroke, #10b981);
  stroke-dasharray: 0.2 0.8;
  animation: sk-hs9h04-t0-comet calc(1600ms / var(--sk-speed, 1)) linear 0ms var(--sk-iterations, infinite) normal both;
  animation-play-state: var(--sk-play-state, running);
}
@keyframes sk-hs9h04-t0-comet {
  0% {
    stroke-dashoffset: 1;
  }
  100% {
    stroke-dashoffset: 0;
  }
}
@media (prefers-reduced-motion: reduce) {
  .sk-hs9h04 * {
    animation: none;
  }
  .sk-hs9h04-0 {
    stroke-dasharray: none;
    fill-opacity: 1;
  }
  .sk-hs9h04-1 {
    stroke-dasharray: none;
  }
  .sk-hs9h04-2 {
    stroke-dasharray: none;
    fill-opacity: 1;
  }
  .sk-hs9h04-3 {
    stroke-dasharray: none;
  }
}
\`;

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const style = {
    "--sk-speed": speed,
    "--sk-play-state": paused ? "paused" : "running",
    ...(loop === undefined ? {} : { "--sk-iterations": loop ? "infinite" : 1 }),
  } as CSSProperties;

  return (
    <svg
      viewBox="0 0 200 100"
      id="Layer_1"
      width={size}
      height={size}
      className={className ? \`sk-hs9h04 \${className}\` : "sk-hs9h04"}
      style={style}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <path d="M10 90 L40 10 L70 90 Z" fill="#E30613" pathLength="1" className="sk-hs9h04-0" />
      <polyline points="80,90 110,10 140,90" fill="none" stroke="#1D1D1B" strokeWidth="4" strokeMiterlimit="10" pathLength="1" className="sk-hs9h04-1" />
      <path d="M150 90 L190 10" fill="none" stroke="#1D1D1B" strokeWidth="5" strokeMiterlimit="10" pathLength="1" className="sk-hs9h04-1" />
      <ellipse id="accent" cx="170" cy="70" rx="12" ry="8" fill="#2563eb" pathLength="1" className="sk-hs9h04-2" />
      <line x1="10" y1="95" x2="190" y2="95" fill="none" stroke="#10b981" strokeWidth="4" strokeMiterlimit="10" pathLength="1" className="sk-hs9h04-3" />
    </svg>
  );
}
"
`;

exports[`exporters.react > comet × simple-stroke.svg 1`] = `
"import type { CSSProperties } from "react";

// Generated by strokekit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-zky9fr-0 {
  stroke: var(--sk-stroke, #1d4ed8);
  stroke-dasharray: 0.2 0.8;
  animation: sk-zky9fr-t0-comet calc(1600ms / var(--sk-speed, 1)) linear 0ms var(--sk-iterations, infinite) normal both;
  animation-play-state: var(--sk-play-state, running);
}
@keyframes sk-zky9fr-t0-comet {
  0% {
    stroke-dashoffset: 1;
  }
  100% {
    stroke-dashoffset: 0;
  }
}
@media (prefers-reduced-motion: reduce) {
  .sk-zky9fr * {
    animation: none;
  }
  .sk-zky9fr-0 {
    stroke-dasharray: none;
  }
}
\`;

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const style = {
    "--sk-speed": speed,
    "--sk-play-state": paused ? "paused" : "running",
    ...(loop === undefined ? {} : { "--sk-iterations": loop ? "infinite" : 1 }),
  } as CSSProperties;

  return (
    <svg
      viewBox="0 0 120 120"
      width={size ?? 120}
      height={size ?? 120}
      className={className ? \`sk-zky9fr \${className}\` : "sk-zky9fr"}
      style={style}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <title>{"Anel e seta"}</title>
      <g fill="none" stroke="#1d4ed8" strokeWidth="6" strokeLinecap="round">
        <circle cx="60" cy="60" r="44" pathLength="1" className="sk-zky9fr-0" />
        <path d="M36 64 L56 84 L88 40" pathLength="1" className="sk-zky9fr-0" />
      </g>
    </svg>
  );
}
"
`;

exports[`exporters.react > draw × illustrator-classes.svg 1`] = `
"import type { CSSProperties } from "react";

// Generated by strokekit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-15wg6ka-0 {
  stroke: var(--sk-stroke, #E30613);
  stroke-width: 2;
  stroke-dasharray: 1 1;
  animation: sk-15wg6ka-t0-draw calc(1500ms / var(--sk-speed, 1)) ease-in-out 0ms var(--sk-iterations, 1) normal both;
  animation-play-state: var(--sk-play-state, running);
}
.sk-15wg6ka-1 {
  stroke: var(--sk-stroke, #1D1D1B);
  stroke-dasharray: 1 1;
  animation: sk-15wg6ka-t0-draw calc(1500ms / var(--sk-speed, 1)) ease-in-out 0ms var(--sk-iterations, 1) normal both;
  animation-play-state: var(--sk-play-state, running);
}
.sk-15wg6ka-2 {
  stroke: var(--sk-stroke, #2563eb);
  stroke-width: 2;
  stroke-dasharray: 1 1;
  animation: sk-15wg6ka-t0-draw calc(1500ms / var(--sk-speed, 1)) ease-in-out 0ms var(--sk-iterations, 1) normal both;
  animation-play-state: var(--sk-play-state, running);
}
.sk-15wg6ka-3 {
  stroke: var(--sk-stroke, #10b981);
  stroke-dasharray: 1 1;
  animation: sk-15wg6ka-t0-draw calc(1500ms / var(--sk-speed, 1)) ease-in-out 0ms var(--sk-iterations, 1) normal both;
  animation-play-state: var(--sk-play-state, running);
}
@keyframes sk-15wg6ka-t0-draw {
  0% {
    stroke-dashoffset: 1;
  }
  100% {
    stroke-dashoffset: 0;
  }
}
@media (prefers-reduced-motion: reduce) {
  .sk-15wg6ka * {
    animation: none;
  }
  .sk-15wg6ka-0 {
    stroke-dashoffset: 0;
  }
  .sk-15wg6ka-1 {
    stroke-dashoffset: 0;
  }
  .sk-15wg6ka-2 {
    stroke-dashoffset: 0;
  }
  .sk-15wg6ka-3 {
    stroke-dashoffset: 0;
  }
}
\`;

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const style = {
    "--sk-speed": speed,
    "--sk-play-state": paused ? "paused" : "running",
    ...(loop === undefined ? {} : { "--sk-iterations": loop ? "infinite" : 1 }),
  } as CSSProperties;

  return (
    <svg
      viewBox="0 0 200 100"
      id="Layer_1"
      width={size}
      height={size}
      className={className ? \`sk-15wg6ka \${className}\` : "sk-15wg6ka"}
      style={style}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <path d="M10 90 L40 10 L70 90 Z" fill="#E30613" pathLength="1" className="sk-15wg6ka-0" />
      <polyline points="80,90 110,10 140,90" fill="none" stroke="#1D1D1B" strokeWidth="4" strokeMiterlimit="10" pathLength="1" className="sk-15wg6ka-1" />
      <path d="M150 90 L190 10" fill="none" stroke="#1D1D1B" strokeWidth="5" strokeMiterlimit="10" pathLength="1" className="sk-15wg6ka-1" />
      <ellipse id="accent" cx="170" cy="70" rx="12" ry="8" fill="#2563eb" pathLength="1" className="sk-15wg6ka-2" />
      <line x1="10" y1="95" x2="190" y2="95" fill="none" stroke="#10b981" strokeWidth="4" strokeMiterlimit="10" pathLength="1" className="sk-15wg6ka-3" />
    </svg>
  );
}
"
`;

exports[`exporters.react > draw × simple-stroke.svg 1`] = `
"import type { CSSProperties } from "react";

// Generated by strokekit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-18yl2gz-0 {
  stroke: var(--sk-stroke, #1d4ed8);
  stroke-dasharray: 1 1;
  animation: sk-18yl2gz-t0-draw calc(1500ms / var(--sk-speed, 1)) ease-in-out 0ms var(--sk-iterations, 1) normal both;
  animation-play-state: var(--sk-play-state, running);
}
@keyframes sk-18yl2gz-t0-draw {
  0% {
    stroke-dashoffset: 1;
  }
  100% {
    stroke-dashoffset: 0;
  }
}
@media (prefers-reduced-motion: reduce) {
  .sk-18yl2gz * {
    animation: none;
  }
  .sk-18yl2gz-0 {
    stroke-dashoffset: 0;
  }
}
\`;

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const style = {
    "--sk-speed": speed,
    "--sk-play-state": paused ? "paused" : "running",
    ...(loop === undefined ? {} : { "--sk-iterations": loop ? "infinite" : 1 }),
  } as CSSProperties;

  return (
    <svg
      viewBox="0 0 120 120"
      width={size ?? 120}
      height={size ?? 120}
      className={className ? \`sk-18yl2gz \${className}\` : "sk-18yl2gz"}
      style={style}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <title>{"Anel e seta"}</title>
      <g fill="none" stroke="#1d4ed8" strokeWidth="6" strokeLinecap="round">
        <circle cx="60" cy="60" r="44" pathLength="1" className="sk-18yl2gz-0" />
        <path d="M36 64 L56 84 L88 40" pathLength="1" className="sk-18yl2gz-0" />
      </g>
    </svg>
  );
}
"
`;

exports[`exporters.react > draw-fill × illustrator-classes.svg 1`] = `
"import type { CSSProperties } from "react";

// Generated by strokekit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-a4pjse-0 {
  stroke: var(--sk-stroke, #E30613);
  stroke-width: 2;
  stroke-dasharray: 1 1;
  animation: sk-a4pjse-t0-draw-fill calc(2000ms / var(--sk-speed, 1)) ease-in-out 0ms var(--sk-iterations, 1) normal both;
  animation-play-state: var(--sk-play-state, running);
}
.sk-a4pjse-1 {
  stroke: var(--sk-stroke, #1D1D1B);
  stroke-dasharray: 1 1;
  animation: sk-a4pjse-t0-draw-fill calc(2000ms / var(--sk-speed, 1)) ease-in-out 0ms var(--sk-iterations, 1) normal both;
  animation-play-state: var(--sk-play-state, running);
}
.sk-a4pjse-2 {
  stroke: var(--sk-stroke, #2563eb);
  stroke-width: 2;
  stroke-dasharray: 1 1;
  animation: sk-a4pjse-t0-draw-fill calc(2000ms / var(--sk-speed, 1)) ease-in-out 0ms var(--sk-iterations, 1) normal both;
  animation-play-state: var(--sk-play-state, running);
}
.sk-a4pjse-3 {
  stroke: var(--sk-stroke, #10b981);
  stroke-dasharray: 1 1;
  animation: sk-a4pjse-t0-draw-fill calc(2000ms / var(--sk-speed, 1)) ease-in-out 0ms var(--sk-iterations, 1) normal both;
  animation-play-state: var(--sk-play-state, running);
}
@keyframes sk-a4pjse-t0-draw-fill {
  0% {
    stroke-dashoffset: 1;
    fill-opacity: 0;
  }
  60% {
    stroke-dashoffset: 0;
    fill-opacity: 0;
  }
  100% {
    stroke-dashoffset: 0;
    fill-opacity: 1;
  }
}
@media (prefers-reduced-motion: reduce) {
  .sk-a4pjse * {
    animation: none;
  }
  .sk-a4pjse-0 {
    stroke-dashoffset: 0;
    fill-opacity: 1;
  }
  .sk-a4pjse-1 {
    stroke-dashoffset: 0;
    fill-opacity: 1;
  }
  .sk-a4pjse-2 {
    stroke-dashoffset: 0;
    fill-opacity: 1;
  }
  .sk-a4pjse-3 {
    stroke-dashoffset: 0;
    fill-opacity: 1;
  }
}
\`;

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const style = {
    "--sk-speed": speed,
    "--sk-play-state": paused ? "paused" : "running",
    ...(loop === undefined ? {} : { "--sk-iterations": loop ? "infinite" : 1 }),
  } as CSSProperties;

  return (
    <svg
      viewBox="0 0 200 100"
      id="Layer_1"
      width={size}
      height={size}
      className={className ? \`sk-a4pjse \${className}\` : "sk-a4pjse"}
      style={style}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <path d="M10 90 L40 10 L70 90 Z" fill="#E30613" pathLength="1" className="sk-a4pjse-0" />
      <polyline points="80,90 110,10 140,90" fill="none" stroke="#1D1D1B" strokeWidth="4" strokeMiterlimit="10" pathLength="1" className="sk-a4pjse-1" />
      <path d="M150 90 L190 10" fill="none" stroke="#1D1D1B" strokeWidth="5" strokeMiterlimit="10" pathLength="1" className="sk-a4pjse-1" />
      <ellipse id="accent" cx="170" cy="70" rx="12" ry="8" fill="#2563eb" pathLength="1" className="sk-a4pjse-2" />
      <line x1="10" y1="95" x2="190" y2="95" fill="none" stroke="#10b981" strokeWidth="4" strokeMiterlimit="10" pathLength="1" className="sk-a4pjse-3" />
    </svg>
  );
}
"
`;

exports[`exporters.react > draw-fill × simple-stroke.svg 1`] = `
"import type { CSSProperties } from "react";

// Generated by strokekit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-159tjnt-0 {
  stroke: var(--sk-stroke, #1d4ed8);
  stroke-dasharray: 1 1;
  animation: sk-159tjnt-t0-draw-fill calc(2000ms / var(--sk-speed, 1)) ease-in-out 0ms var(--sk-iterations, 1) normal both;
  animation-play-state: var(--sk-play-state, running);
}
@keyframes sk-159tjnt-t0-draw-fill {
  0% {
    stroke-dashoffset: 1;
    fill-opacity: 0;
  }
  60% {
    stroke-dashoffset: 0;
    fill-opacity: 0;
  }
  100% {
    stroke-dashoffset: 0;
    fill-opacity: 1;
  }
}
@media (prefers-reduced-motion: reduce) {
  .sk-159tjnt * {
    animation: none;
  }
  .sk-159tjnt-0 {
    stroke-dashoffset: 0;
    fill-opacity: 1;
  }
}
\`;

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const style = {
    "--sk-speed": speed,
    "--sk-play-state": paused ? "paused" : "running",
    ...(loop === undefined ? {} : { "--sk-iterations": loop ? "infinite" : 1 }),
  } as CSSProperties;

  return (
    <svg
      viewBox="0 0 120 120"
      width={size ?? 120}
      height={size ?? 120}
      className={className ? \`sk-159tjnt \${className}\` : "sk-159tjnt"}
      style={style}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <title>{"Anel e seta"}</title>
      <g fill="none" stroke="#1d4ed8" strokeWidth="6" strokeLinecap="round">
        <circle cx="60" cy="60" r="44" pathLength="1" className="sk-159tjnt-0" />
        <path d="M36 64 L56 84 L88 40" pathLength="1" className="sk-159tjnt-0" />
      </g>
    </svg>
  );
}
"
`;

exports[`exporters.react > march × illustrator-classes.svg 1`] = `
"import type { CSSProperties } from "react";

// Generated by strokekit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-1n27b5f-0 {
  stroke: var(--sk-stroke, #E30613);
  stroke-width: 2;
  fill-opacity: 0.2;
  stroke-dasharray: 0.0408 0.0306;
  animation: sk-1n27b5f-t0-march calc(800ms / var(--sk-speed, 1)) linear 0ms var(--sk-iterations, infinite) normal both;
  animation-play-state: var(--sk-play-state, running);
}
.sk-1n27b5f-1 {
  stroke: var(--sk-stroke, #1D1D1B);
  stroke-dasharray: 0.0408 0.0306;
  animation: sk-1n27b5f-t0-march calc(800ms / var(--sk-speed, 1)) linear 0ms var(--sk-iterations, infinite) normal both;
  animation-play-state: var(--sk-play-state, running);
}
.sk-1n27b5f-2 {
  stroke: var(--sk-stroke, #2563eb);
  stroke-width: 2;
  fill-opacity: 0.2;
  stroke-dasharray: 0.0408 0.0306;
  animation: sk-1n27b5f-t0-march calc(800ms / var(--sk-speed, 1)) linear 0ms var(--sk-iterations, infinite) normal both;
  animation-play-state: var(--sk-play-state, running);
}
.sk-1n27b5f-3 {
  stroke: var(--sk-stroke, #10b981);
  stroke-dasharray: 0.0408 0.0306;
  animation: sk-1n27b5f-t0-march calc(800ms / var(--sk-speed, 1)) linear 0ms var(--sk-iterations, infinite) normal both;
  animation-play-state: var(--sk-play-state, running);
}
@keyframes sk-1n27b5f-t0-march {
  0% {
    stroke-dashoffset: 0;
  }
  100% {
    stroke-dashoffset: -0.0714;
  }
}
@media (prefers-reduced-motion: reduce) {
  .sk-1n27b5f * {
    animation: none;
  }
  .sk-1n27b5f-0 {
    fill-opacity: 1;
  }
  .sk-1n27b5f-2 {
    fill-opacity: 1;
  }
}
\`;

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const style = {
    "--sk-speed": speed,
    "--sk-play-state": paused ? "paused" : "running",
    ...(loop === undefined ? {} : { "--sk-iterations": loop ? "infinite" : 1 }),
  } as CSSProperties;

  return (
    <svg
      viewBox="0 0 200 100"
      id="Layer_1"
      width={size}
      height={size}
      className={className ? \`sk-1n27b5f \${className}\` : "sk-1n27b5f"}
      style={style}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <path d="M10 90 L40 10 L70 90 Z" fill="#E30613" pathLength="1" className="sk-1n27b5f-0" />
      <polyline points="80,90 110,10 140,90" fill="none" stroke="#1D1D1B" strokeWidth="4" strokeMiterlimit="10" pathLength="1" className="sk-1n27b5f-1" />
      <path d="M150 90 L190 10" fill="none" stroke="#1D1D1B" strokeWidth="5" strokeMiterlimit="10" pathLength="1" className="sk-1n27b5f-1" />
      <ellipse id="accent" cx="170" cy="70" rx="12" ry="8" fill="#2563eb" pathLength="1" className="sk-1n27b5f-2" />
      <line x1="10" y1="95" x2="190" y2="95" fill="none" stroke="#10b981" strokeWidth="4" strokeMiterlimit="10" pathLength="1" className="sk-1n27b5f-3" />
    </svg>
  );
}
"
`;

exports[`exporters.react > march × simple-stroke.svg 1`] = `
"import type { CSSProperties } from "react";

// Generated by strokekit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-4quvq4-0 {
  stroke: var(--sk-stroke, #1d4ed8);
  stroke-dasharray: 0.0408 0.0306;
  animation: sk-4quvq4-t0-march calc(800ms / var(--sk-speed, 1)) linear 0ms var(--sk-iterations, infinite) normal both;
  animation-play-state: var(--sk-play-state, running);
}
@keyframes sk-4quvq4-t0-march {
  0% {
    stroke-dashoffset: 0;
  }
  100% {
    stroke-dashoffset: -0.0714;
  }
}
@media (prefers-reduced-motion: reduce) {
  .sk-4quvq4 * {
    animation: none;
  }
}
\`;

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const style = {
    "--sk-speed": speed,
    "--sk-play-state": paused ? "paused" : "running",
    ...(loop === undefined ? {} : { "--sk-iterations": loop ? "infinite" : 1 }),
  } as CSSProperties;

  return (
    <svg
      viewBox="0 0 120 120"
      width={size ?? 120}
      height={size ?? 120}
      className={className ? \`sk-4quvq4 \${className}\` : "sk-4quvq4"}
      style={style}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <title>{"Anel e seta"}</title>
      <g fill="none" stroke="#1d4ed8" strokeWidth="6" strokeLinecap="round">
        <circle cx="60" cy="60" r="44" pathLength="1" className="sk-4quvq4-0" />
        <path d="M36 64 L56 84 L88 40" pathLength="1" className="sk-4quvq4-0" />
      </g>
    </svg>
  );
}
"
`;

exports[`exporters.react > pulse × illustrator-classes.svg 1`] = `
"import type { CSSProperties } from "react";

// Generated by strokekit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-1djgz4m-0 {
  transform-box: fill-box;
  transform-origin: center;
  animation: sk-1djgz4m-t0-pulse calc(1400ms / var(--sk-speed, 1)) ease-in-out 0ms var(--sk-iterations, infinite) normal both;
  animation-play-state: var(--sk-play-state, running);
}
@keyframes sk-1djgz4m-t0-pulse {
  0% {
    opacity: 1;
    transform: scale(1);
  }
  50% {
    opacity: 0.5;
    transform: scale(1.06);
  }
  100% {
    opacity: 1;
    transform: scale(1);
  }
}
@media (prefers-reduced-motion: reduce) {
  .sk-1djgz4m * {
    animation: none;
  }
  .sk-1djgz4m-0 {
    opacity: 1;
    transform: none;
  }
}
\`;

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const style = {
    "--sk-speed": speed,
    "--sk-play-state": paused ? "paused" : "running",
    ...(loop === undefined ? {} : { "--sk-iterations": loop ? "infinite" : 1 }),
  } as CSSProperties;

  return (
    <svg
      viewBox="0 0 200 100"
      id="Layer_1"
      width={size}
      height={size}
      className={className ? \`sk-1djgz4m \${className}\` : "sk-1djgz4m"}
      style={style}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <path d="M10 90 L40 10 L70 90 Z" fill="#E30613" className="sk-1djgz4m-0" />
      <polyline points="80,90 110,10 140,90" fill="none" stroke="#1D1D1B" strokeWidth="4" strokeMiterlimit="10" className="sk-1djgz4m-0" />
      <path d="M150 90 L190 10" fill="none" stroke="#1D1D1B" strokeWidth="5" strokeMiterlimit="10" className="sk-1djgz4m-0" />
      <ellipse id="accent" cx="170" cy="70" rx="12" ry="8" fill="#2563eb" className="sk-1djgz4m-0" />
      <line x1="10" y1="95" x2="190" y2="95" fill="none" stroke="#10b981" strokeWidth="4" strokeMiterlimit="10" className="sk-1djgz4m-0" />
    </svg>
  );
}
"
`;

exports[`exporters.react > pulse × simple-stroke.svg 1`] = `
"import type { CSSProperties } from "react";

// Generated by strokekit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-18asr03-0 {
  transform-box: fill-box;
  transform-origin: center;
  animation: sk-18asr03-t0-pulse calc(1400ms / var(--sk-speed, 1)) ease-in-out 0ms var(--sk-iterations, infinite) normal both;
  animation-play-state: var(--sk-play-state, running);
}
@keyframes sk-18asr03-t0-pulse {
  0% {
    opacity: 1;
    transform: scale(1);
  }
  50% {
    opacity: 0.5;
    transform: scale(1.06);
  }
  100% {
    opacity: 1;
    transform: scale(1);
  }
}
@media (prefers-reduced-motion: reduce) {
  .sk-18asr03 * {
    animation: none;
  }
  .sk-18asr03-0 {
    opacity: 1;
    transform: none;
  }
}
\`;

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const style = {
    "--sk-speed": speed,
    "--sk-play-state": paused ? "paused" : "running",
    ...(loop === undefined ? {} : { "--sk-iterations": loop ? "infinite" : 1 }),
  } as CSSProperties;

  return (
    <svg
      viewBox="0 0 120 120"
      width={size ?? 120}
      height={size ?? 120}
      className={className ? \`sk-18asr03 \${className}\` : "sk-18asr03"}
      style={style}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <title>{"Anel e seta"}</title>
      <g fill="none" stroke="#1d4ed8" strokeWidth="6" strokeLinecap="round">
        <circle cx="60" cy="60" r="44" className="sk-18asr03-0" />
        <path d="M36 64 L56 84 L88 40" className="sk-18asr03-0" />
      </g>
    </svg>
  );
}
"
`;

exports[`exporters.react > stagger-draw × illustrator-classes.svg 1`] = `
"import type { CSSProperties } from "react";

// Generated by strokekit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-1oe5b5q-0 {
  stroke: var(--sk-stroke, #E30613);
  stroke-width: 2;
  stroke-dasharray: 1 1;
  animation: sk-1oe5b5q-t0-stagger-draw calc(900ms / var(--sk-speed, 1)) ease-in-out 0ms var(--sk-iterations, 1) normal both;
  animation-play-state: var(--sk-play-state, running);
}
.sk-1oe5b5q-1 {
  stroke: var(--sk-stroke, #1D1D1B);
  stroke-dasharray: 1 1;
  animation: sk-1oe5b5q-t0-stagger-draw calc(900ms / var(--sk-speed, 1)) ease-in-out calc(150ms / var(--sk-speed, 1)) var(--sk-iterations, 1) normal both;
  animation-play-state: var(--sk-play-state, running);
}
.sk-1oe5b5q-2 {
  stroke: var(--sk-stroke, #1D1D1B);
  stroke-dasharray: 1 1;
  animation: sk-1oe5b5q-t0-stagger-draw calc(900ms / var(--sk-speed, 1)) ease-in-out calc(300ms / var(--sk-speed, 1)) var(--sk-iterations, 1) normal both;
  animation-play-state: var(--sk-play-state, running);
}
.sk-1oe5b5q-3 {
  stroke: var(--sk-stroke, #2563eb);
  stroke-width: 2;
  stroke-dasharray: 1 1;
  animation: sk-1oe5b5q-t0-stagger-draw calc(900ms / var(--sk-speed, 1)) ease-in-out calc(450ms / var(--sk-speed, 1)) var(--sk-iterations, 1) normal both;
  animation-play-state: var(--sk-play-state, running);
}
.sk-1oe5b5q-4 {
  stroke: var(--sk-stroke, #10b981);
  stroke-dasharray: 1 1;
  animation: sk-1oe5b5q-t0-stagger-draw calc(900ms / var(--sk-speed, 1)) ease-in-out calc(600ms / var(--sk-speed, 1)) var(--sk-iterations, 1) normal both;
  animation-play-state: var(--sk-play-state, running);
}
@keyframes sk-1oe5b5q-t0-stagger-draw {
  0% {
    stroke-dashoffset: 1;
  }
  100% {
    stroke-dashoffset: 0;
  }
}
@media (prefers-reduced-motion: reduce) {
  .sk-1oe5b5q * {
    animation: none;
  }
  .sk-1oe5b5q-0 {
    stroke-dashoffset: 0;
  }
  .sk-1oe5b5q-1 {
    stroke-dashoffset: 0;
  }
  .sk-1oe5b5q-2 {
    stroke-dashoffset: 0;
  }
  .sk-1oe5b5q-3 {
    stroke-dashoffset: 0;
  }
  .sk-1oe5b5q-4 {
    stroke-dashoffset: 0;
  }
}
\`;

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const style = {
    "--sk-speed": speed,
    "--sk-play-state": paused ? "paused" : "running",
    ...(loop === undefined ? {} : { "--sk-iterations": loop ? "infinite" : 1 }),
  } as CSSProperties;

  return (
    <svg
      viewBox="0 0 200 100"
      id="Layer_1"
      width={size}
      height={size}
      className={className ? \`sk-1oe5b5q \${className}\` : "sk-1oe5b5q"}
      style={style}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <path d="M10 90 L40 10 L70 90 Z" fill="#E30613" pathLength="1" className="sk-1oe5b5q-0" />
      <polyline points="80,90 110,10 140,90" fill="none" stroke="#1D1D1B" strokeWidth="4" strokeMiterlimit="10" pathLength="1" className="sk-1oe5b5q-1" />
      <path d="M150 90 L190 10" fill="none" stroke="#1D1D1B" strokeWidth="5" strokeMiterlimit="10" pathLength="1" className="sk-1oe5b5q-2" />
      <ellipse id="accent" cx="170" cy="70" rx="12" ry="8" fill="#2563eb" pathLength="1" className="sk-1oe5b5q-3" />
      <line x1="10" y1="95" x2="190" y2="95" fill="none" stroke="#10b981" strokeWidth="4" strokeMiterlimit="10" pathLength="1" className="sk-1oe5b5q-4" />
    </svg>
  );
}
"
`;

exports[`exporters.react > stagger-draw × simple-stroke.svg 1`] = `
"import type { CSSProperties } from "react";

// Generated by strokekit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-1sybw6l-0 {
  stroke: var(--sk-stroke, #1d4ed8);
  stroke-dasharray: 1 1;
  animation: sk-1sybw6l-t0-stagger-draw calc(900ms / var(--sk-speed, 1)) ease-in-out 0ms var(--sk-iterations, 1) normal both;
  animation-play-state: var(--sk-play-state, running);
}
.sk-1sybw6l-1 {
  stroke: var(--sk-stroke, #1d4ed8);
  stroke-dasharray: 1 1;
  animation: sk-1sybw6l-t0-stagger-draw calc(900ms / var(--sk-speed, 1)) ease-in-out calc(150ms / var(--sk-speed, 1)) var(--sk-iterations, 1) normal both;
  animation-play-state: var(--sk-play-state, running);
}
@keyframes sk-1sybw6l-t0-stagger-draw {
  0% {
    stroke-dashoffset: 1;
  }
  100% {
    stroke-dashoffset: 0;
  }
}
@media (prefers-reduced-motion: reduce) {
  .sk-1sybw6l * {
    animation: none;
  }
  .sk-1sybw6l-0 {
    stroke-dashoffset: 0;
  }
  .sk-1sybw6l-1 {
    stroke-dashoffset: 0;
  }
}
\`;

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const style = {
    "--sk-speed": speed,
    "--sk-play-state": paused ? "paused" : "running",
    ...(loop === undefined ? {} : { "--sk-iterations": loop ? "infinite" : 1 }),
  } as CSSProperties;

  return (
    <svg
      viewBox="0 0 120 120"
      width={size ?? 120}
      height={size ?? 120}
      className={className ? \`sk-1sybw6l \${className}\` : "sk-1sybw6l"}
      style={style}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <title>{"Anel e seta"}</title>
      <g fill="none" stroke="#1d4ed8" strokeWidth="6" strokeLinecap="round">
        <circle cx="60" cy="60" r="44" pathLength="1" className="sk-1sybw6l-0" />
        <path d="M36 64 L56 84 L88 40" pathLength="1" className="sk-1sybw6l-1" />
      </g>
    </svg>
  );
}
"
`;

exports[`exporters.react > yoyo × illustrator-classes.svg 1`] = `
"import type { CSSProperties } from "react";

// Generated by strokekit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-1747lde-0 {
  stroke: var(--sk-stroke, #E30613);
  stroke-width: 2;
  fill-opacity: 0.2;
  stroke-dasharray: 0.25 1;
  animation: sk-1747lde-t0-yoyo calc(1200ms / var(--sk-speed, 1)) ease-in-out 0ms var(--sk-iterations, infinite) alternate both;
  animation-play-state: var(--sk-play-state, running);
}
.sk-1747lde-1 {
  stroke: var(--sk-stroke, #1D1D1B);
  stroke-dasharray: 0.25 1;
  animation: sk-1747lde-t0-yoyo calc(1200ms / var(--sk-speed, 1)) ease-in-out 0ms var(--sk-iterations, infinite) alternate both;
  animation-play-state: var(--sk-play-state, running);
}
.sk-1747lde-2 {
  stroke: var(--sk-stroke, #2563eb);
  stroke-width: 2;
  fill-opacity: 0.2;
  stroke-dasharray: 0.25 1;
  animation: sk-1747lde-t0-yoyo calc(1200ms / var(--sk-speed, 1)) ease-in-out 0ms var(--sk-iterations, infinite) alternate both;
  animation-play-state: var(--sk-play-state, running);
}
.sk-1747lde-3 {
  stroke: var(--sk-stroke, #10b981);
  stroke-dasharray: 0.25 1;
  animation: sk-1747lde-t0-yoyo calc(1200ms / var(--sk-speed, 1)) ease-in-out 0ms var(--sk-iterations, infinite) alternate both;
  animation-play-state: var(--sk-play-state, running);
}
@keyframes sk-1747lde-t0-yoyo {
  0% {
    stroke-dashoffset: 0;
  }
  100% {
    stroke-dashoffset: -0.75;
  }
}
@media (prefers-reduced-motion: reduce) {
  .sk-1747lde * {
    animation: none;
  }
  .sk-1747lde-0 {
    stroke-dasharray: none;
    fill-opacity: 1;
  }
  .sk-1747lde-1 {
    stroke-dasharray: none;
  }
  .sk-1747lde-2 {
    stroke-dasharray: none;
    fill-opacity: 1;
  }
  .sk-1747lde-3 {
    stroke-dasharray: none;
  }
}
\`;

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const style = {
    "--sk-speed": speed,
    "--sk-play-state": paused ? "paused" : "running",
    ...(loop === undefined ? {} : { "--sk-iterations": loop ? "infinite" : 1 }),
  } as CSSProperties;

  return (
    <svg
      viewBox="0 0 200 100"
      id="Layer_1"
      width={size}
      height={size}
      className={className ? \`sk-1747lde \${className}\` : "sk-1747lde"}
      style={style}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <path d="M10 90 L40 10 L70 90 Z" fill="#E30613" pathLength="1" className="sk-1747lde-0" />
      <polyline points="80,90 110,10 140,90" fill="none" stroke="#1D1D1B" strokeWidth="4" strokeMiterlimit="10" pathLength="1" className="sk-1747lde-1" />
      <path d="M150 90 L190 10" fill="none" stroke="#1D1D1B" strokeWidth="5" strokeMiterlimit="10" pathLength="1" className="sk-1747lde-1" />
      <ellipse id="accent" cx="170" cy="70" rx="12" ry="8" fill="#2563eb" pathLength="1" className="sk-1747lde-2" />
      <line x1="10" y1="95" x2="190" y2="95" fill="none" stroke="#10b981" strokeWidth="4" strokeMiterlimit="10" pathLength="1" className="sk-1747lde-3" />
    </svg>
  );
}
"
`;

exports[`exporters.react > yoyo × simple-stroke.svg 1`] = `
"import type { CSSProperties } from "react";

// Generated by strokekit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-1xwti19-0 {
  stroke: var(--sk-stroke, #1d4ed8);
  stroke-dasharray: 0.25 1;
  animation: sk-1xwti19-t0-yoyo calc(1200ms / var(--sk-speed, 1)) ease-in-out 0ms var(--sk-iterations, infinite) alternate both;
  animation-play-state: var(--sk-play-state, running);
}
@keyframes sk-1xwti19-t0-yoyo {
  0% {
    stroke-dashoffset: 0;
  }
  100% {
    stroke-dashoffset: -0.75;
  }
}
@media (prefers-reduced-motion: reduce) {
  .sk-1xwti19 * {
    animation: none;
  }
  .sk-1xwti19-0 {
    stroke-dasharray: none;
  }
}
\`;

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const style = {
    "--sk-speed": speed,
    "--sk-play-state": paused ? "paused" : "running",
    ...(loop === undefined ? {} : { "--sk-iterations": loop ? "infinite" : 1 }),
  } as CSSProperties;

  return (
    <svg
      viewBox="0 0 120 120"
      width={size ?? 120}
      height={size ?? 120}
      className={className ? \`sk-1xwti19 \${className}\` : "sk-1xwti19"}
      style={style}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <title>{"Anel e seta"}</title>
      <g fill="none" stroke="#1d4ed8" strokeWidth="6" strokeLinecap="round">
        <circle cx="60" cy="60" r="44" pathLength="1" className="sk-1xwti19-0" />
        <path d="M36 64 L56 84 L88 40" pathLength="1" className="sk-1xwti19-0" />
      </g>
    </svg>
  );
}
"
`;
